--- a/.env
+++ b/.env
@@ -1,16 +1,5 @@
-# PORT=3005
-# DB_URL=mongodb://localhost:27017/test
-# JWT=jwt_secret 
-# DB_HOST=localhost
-# DB_NAME=TEST
-# DB_USER=mongodb
-# DB_PASS=27017
 MONGODB_URI=mongodb+srv://mohammad:6616678@cluster1.129qd.mongodb.net
-# mongodb+srv://mohammad:<db_password>@cluster1.129qd.mongodb.net/
 PORT=3005
-# DB_URL=database_708u
-MDB_NAME=test
-MDB_USER=mongodb://localhost:27017/test
-MDB_PASS=6616678
+DB_NAME=test
 
 
